# backend/handlers/send_command.go
@@ -1,8 +1,6 @@
 package handlers
 
 import (
-	"strings"
-
 	"github.com/Phi-S/cs-server-manager/constants"
 	"github.com/Phi-S/cs-server-manager/server"
 
@@ -13,23 +11,18 @@ type CommandRequest struct {
 	Command string `json:"command" validate:"required,lt=128"`
 }
 
-type CommandResponse struct {
-	Output []string `json:"output"`
-}
-
 func RegisterCommand(r fiber.Router) {
 	r.Post("/command", commandHandler)
 }
 
-// commandHandler
 // @Summary				Send game-server command
 // @Tags         		server
 // @Accept       		json
-// @Produce 			json
+// @Produce 			plain
 // @Param		 		command body CommandRequest true "This command will be executed on the game server"
-// @Success     		200  {object}  CommandResponse
-// @Failure				400  {object}  handlers.ErrorResponse
-// @Failure				500  {object}  handlers.ErrorResponse
+// @Success     		200  {string}	string
+// @Failure				400  {object}	handlers.ErrorResponse
+// @Failure				500  {object}	handlers.ErrorResponse
 // @Router       		/command [post]
 func commandHandler(c fiber.Ctx) error {
 	serverInstance, err := GetFromLocals[*server.Instance](c, constants.ServerInstanceKey)
@@ -54,9 +47,5 @@ func commandHandler(c fiber.Ctx) error {
 		return NewInternalServerErrorWithInternal(c, err)
 	}
 
-	resp := CommandResponse{
-		Output: strings.Split(out, "\n"),
-	}
-
-	return c.Status(fiber.StatusOK).JSON(resp)
+	return c.Status(fiber.StatusOK).SendString(out)
 }
